# bigdawg

./: .gitignore  .gitmodules  BUILDING.md  Dockerfile  README.md  Vagrantfile  bdclient  bdclient_8080  bitbucket-pipelines.yml  compile  docker-compose.yml  git_useful_commands  license.txt  pom.xml
accumulo/: Dockerfile
admin_ui/: ApiForm.py  CatalogClient.py  CatalogRegistry.py  DockerClient.py  INSTALL.md  Importer.py  QueryClient.py  README.md  SchemaClient.py  Util.py  app.py  catalog_config.txt  env.sample  example-CatalogClient.py  example-DockerClient.py  insert.sql  requirements.txt
admin_ui/templates/: api.html  api_form.html  catalog.html  import.html  layout.html  links.html  (+2 more)
doc/: .#adam_doc.txt  adam_doc.txt
installation/: #accumulo.txt#  accumulo_properties.conf  accumulo_tutorial.txt  change_port.py  clean_source.sql  connect_remote_postgres.sh  contributors.txt  dependecies.xml  final.sql  hadoop.txt  install_zookeeper.sh  installation-HDFS-Zookeeper-Accumulo  installation.txt  installation_PostgreSQL.txt  load_mimic2.txt  migration_view.sql  postgresql_ubuntu_installation.txt  protocol_buffers.txt  recreate_table.sql  restart_postgres.sh  restart_scidb.sh  restart_vertica.sh  restart_zookeeper.sh  rsync_code.sh  scidb.txt  scratch.sql  setup.sh  show_logs.sh  ssh-config.txt  start_accumulo_minicluster.sh  start_all.sh  start_postgres.sh  start_postgresql.sh  start_scidb.sh  start_vertica.sh  start_zookeeper.sh  stop_all.sh  stop_postgres.sh  stop_scidb.sh  stop_vertica.sh  (+3 more)
provisions/: .gitignore  README.md  build-images.sh  build_all_images.sh  build_base_images.sh  cleanup_containers.sh  dev-build_base_images.sh  dev-setup_bigdawg_docker.sh  run_all_containers.sh  run_ap.sh  run_sql_scidb.sh  s00318.txt  setup_bigdawg_docker.sh  setup_bigdawg_docker_mysql.sh  setup_bigdawg_docker_vertica.sh  setup_data.sh  setup_ms_tpch.sh  setup_pg_tpch.sh  setup_sstore.sh  setup_tpch.sh  setup_v_tpch.sh  start_postgres.sh  vagrant.sh
scripts/: build_jar.sh  build_jar_mit.sh  build_jar_test.sh  create_example_tables.sql  create_log_table_database_logs.sql  create_register_tables.sql  drop_caches.sh  run_app.sh  send_jar_mit.sh
src/main/cmigrator/: CMakeLists.txt  CMakeLists_old.txt  Makefile  README.md  check_stdin_stdout  commands.sh  commands_scidb2postgres.sh  compile_all.sh  copyFromS-Store.sh  copyToS-Store.sh  data-migrator  format_code.sh  open_emacs.sh  out  perf.data  perf.data.old  postgres2scidb  run_make.sh  scidb2postgres
src/main/cmigrator/data/: .#int.csv  IntDoubleString.csv  int.csv  int.scidb  postgres_6_attributes.csv  postgres_int_double.csv  postgres_int_examplar2.csv  scidbCsvIntDoubleString.csv  scidbCsvIntDoubleStringWithNull.csv  scidb_int_null.scidb  test_string.scidb
src/main/cmigrator/include/: attribute.h  buffer.h  csv2postgres.h  csv2scidb.h  dataMigratorExceptions.h  endianness.h  postgres.h  postgres2csv.h  postgres2scidb.h  scidb2postgres.h  typeAttributeMap.h  utils.h
src/main/cmigrator/include/attribute/: attribute.h
src/main/cmigrator/include/data-migrator/: attribute.h  dataMigratorExceptions.h  endianness.h  postgres.h  postgres2csv.h  postgres2scidb.h  scidb2postgres.h  typeAttributeMap.h  utils.h
src/main/cmigrator/include/data-migrator/common/: NValue.hpp  ValuePeeker.hpp  debuglog.h
src/main/cmigrator/installation/: #s-store.sh#  s-store.sh
src/main/cmigrator/perfLogs/: perfForData-migratorWithBuffer
src/main/cmigrator/samples/: sample1.cc
src/main/cmigrator/src/: #fromPostgresToScidbInterface.cpp#  #scidb2postgres.cpp#  .cproject  CMakeLists.txt  attribute.cpp  buffer.c  check_stdin_stdout.cpp  csv2postgres.cpp  csv2scidb.c  csv2scidb.cpp  data-formatter.cpp  data-migrator.cpp  ex1.c  fromPostgresToScidb.cpp  fromScidbToPostgres.cpp  hellofunc.cpp  postgres.cpp  postgres2csv.cpp  postgres2scidb.cpp  scidb2postgres.cpp  typeAttributeMap.cpp  utils.cpp
src/main/cmigrator/src/attribute/: attribute.cpp
src/main/cmigrator/src/data-formatter/: CMakeLists.txt  main.cpp
src/main/cmigrator/src/data-formatter/attribute/: attribute.cpp  attribute.h  attributeWrapper.h
src/main/cmigrator/src/data-formatter/common/: NValue.hpp  ValuePeeker.hpp  buffer.cpp  endianness.h  formatterExceptions.h  utils.cpp  utils.h
src/main/cmigrator/src/data-formatter/csv/: csv.cpp  csv.h  csvAttribute.cpp  csvAttribute.h
src/main/cmigrator/src/data-formatter/format/: README.txt  attribute.cpp  attribute.h  attributeWrapper.h  format.cpp  format.h
src/main/cmigrator/src/data-formatter/formatter/: formatter.cpp  formatter.h
src/main/cmigrator/src/data-formatter/postgres/: postgres.cpp  postgres.h  postgresAttribute.cpp  postgresAttribute.h
src/main/cmigrator/src/data-formatter/postgres/postgres-types/numeric/: compile.sh  numeric.c
src/main/cmigrator/src/data-formatter/scidb/: scidb.cpp  scidb.h  scidbAttribute.cpp  scidbAttribute.h
src/main/cmigrator/src/data-formatter/vertica/: vertica.cpp  vertica.h  verticaAttribute.cpp  verticaAttribute.h
src/main/cmigrator/src/data-migrator/: CMakeLists.txt  attribute.cpp  buffer.cpp  buffer.h  csv2scidb.cpp  data-migrator.cpp  endianness.h  hellofunc.cpp  postgres.cpp  postgres2csv.cpp  postgres2scidb.cpp  scidb2postgres.cpp  typeAttributeMap.cpp  utils.cpp  utils.h
src/main/cmigrator/src/data-migrator/postgres-types/numeric/: numeric  numeric.c
src/main/cmigrator/src/main/: CMakeLists.txt  main.cpp
src/main/cmigrator/test/: CMakeLists.txt  Makefile  buffer_unittest.cc  numeric_unittest.cc  runTests.sh  typeAttributeMap_unittest.cc
src/main/cmigrator/test/attribute/: #attribute_unittest.cc#  attribute_unittest.cc
src/main/cmigrator/test/gtest/googletest/: CMakeCache.txt  Makefile  cmake_install.cmake
src/main/cmigrator/test/gtest/googletest/make/: sample1_unittest
src/main/cmigrator/test/main_tests/: CMakeLists.txt  numeric_unittest.cc  vertica_null_bits_unittest.cpp
test/: clean_table_array.sh  csv_to_scidb_load_redimension.sh  pg_dump.text  pg_dump_restore.sh  pg_dump_restore_pipe.sh  pg_dump_test.sh  test_waveform.sh  waveform_test.sh
thrift/: query.thrift
(+1094 files in other folders)
